# chickenandbazel

./: .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  BUILD.bazel  LICENSE  MODULE.bazel  Makefile  README.md  WORKSPACE  multitool.lock.json
.github/: renovate-regex.json  renovate.json
.github/workflows/: bazel.yaml  changelog.yml  conventional-commits.yaml  just-one-silly-workflow.yml  merge-bot.yaml  release-if-tagged.yaml  tag-if-release-worthy.yaml
bzl/: bazelisk_repositories.bzl  ibazel_repositories.bzl  workspace_checksums.bzl
toolchains/age/: BUILD.bazel
toolchains/age-keygen/: BUILD.bazel
toolchains/bazelisk/: BUILD.bazel
toolchains/git-lfs/: BUILD.bazel
toolchains/git-town/: BUILD.bazel
toolchains/ibazel/: BUILD.bazel
toolchains/lipo/: configure_lipo_from_system.bzl
toolchains/multitool/: BUILD.bazel
toolchains/nomad/: BUILD.bazel
toolchains/sops/: BUILD.bazel
toolchains/talosctl/: BUILD.bazel
toolchains/terraform/: BUILD.bazel
toolchains/terragrunt/: BUILD.bazel
