load("//lib:lipo.bzl", "lipo_check", "lipo_create")

lipo_check(binary = ":age-keygen")

lipo_create(
    name = "lipo",
    srcs = [
        "@@rules_multitool++multitool+multitool.age-keygen.macos_arm64//tools/age-keygen:macos_arm64_executable",
        "@@rules_multitool++multitool+multitool.age-keygen.macos_x86_64//tools/age-keygen:macos_x86_64_executable",
    ],
    out = "age-keygen",
)
