load("//lib:lipo.bzl", "lipo_create")

lipo_create(
    name = "lipo",
    srcs = [
        "@@rules_multitool++multitool+multitool.gittown.macos_arm64//tools/gittown:macos_arm64_executable",
        "@@rules_multitool++multitool+multitool.gittown.macos_x86_64//tools/gittown:macos_x86_64_executable",
    ],
    out = "git-town",
)
