load("//lib:lipo.bzl", "lipo_check", "lipo_create")

lipo_check(binary = ":multitool")

lipo_create(
    name = "lipo",
    srcs = [
        "@@rules_multitool++multitool+multitool.multitool.macos_arm64//tools/multitool:macos_arm64_executable",
        "@@rules_multitool++multitool+multitool.multitool.macos_x86_64//tools/multitool:macos_x86_64_executable",
    ],
    out = "multitool",
)
