load("//lib:lipo.bzl", "lipo_check", "lipo_create")

lipo_check(binary = ":nomad")

lipo_create(
    name = "lipo",
    srcs = [
        "@@rules_multitool++multitool+multitool.nomad.macos_arm64//tools/nomad:macos_arm64_executable",
        "@@rules_multitool++multitool+multitool.nomad.macos_x86_64//tools/nomad:macos_x86_64_executable",
    ],
    out = "nomad",
)
