load("//lib:lipo.bzl", "lipo_check", "lipo_create")

lipo_check(binary = ":sops")

lipo_create(
    name = "lipo",
    srcs = [
        "@@rules_multitool++multitool+multitool.sops.macos_arm64//tools/sops:macos_arm64_executable",
        "@@rules_multitool++multitool+multitool.sops.macos_x86_64//tools/sops:macos_x86_64_executable",
    ],
    out = "sops",
)
