load("//lib:lipo.bzl", "lipo_check", "lipo_create")

lipo_check(binary = ":talosctl")

lipo_create(
    name = "lipo",
    srcs = [
        "@@rules_multitool++multitool+multitool.talosctl.macos_arm64//tools/talosctl:macos_arm64_executable",
        "@@rules_multitool++multitool+multitool.talosctl.macos_x86_64//tools/talosctl:macos_x86_64_executable",
    ],
    out = "talosctl",
)
