load("//lib:lipo.bzl", "lipo_check", "lipo_create")

lipo_check(binary = ":terraform")

lipo_create(
    name = "lipo",
    srcs = [
        "@@rules_multitool++multitool+multitool.terraform.macos_arm64//tools/terraform:macos_arm64_executable",
        "@@rules_multitool++multitool+multitool.terraform.macos_x86_64//tools/terraform:macos_x86_64_executable",
    ],
    out = "terraform",
)
