load("//lib:lipo.bzl", "lipo_check", "lipo_create")

lipo_check(binary = ":terragrunt")

lipo_create(
    name = "lipo",
    srcs = [
        "@@rules_multitool++multitool+multitool.terragrunt.macos_arm64//tools/terragrunt:macos_arm64_executable",
        "@@rules_multitool++multitool+multitool.terragrunt.macos_x86_64//tools/terragrunt:macos_x86_64_executable",
    ],
    out = "terragrunt",
)
